tdf#116460 Update the page number in the statusbar

This patch provides page number update in the status bar while the up/
down arrow/page keys are held pressed.

Change-Id: I61ac40c781a869eb940f1b863047113fcfa851cf